Fix hero image overflow
Stopped the hero image from overflowing off the screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,6 +79,7 @@
 .hero-image {
   height: 300px;
   width: 600px;
+  overflow: hidden;
 }
 
 /* INFORMATION SECTION */
